WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275771
REGRESSION(
280148@main
): It regressed the score of MotionMark CanvasLines
https://bugs.webkit.org/show_bug.cgi?id=275771
Summary
REGRESSION(280148@main): It regressed the score of MotionMark CanvasLines
Said Abou-Hallawa
Reported
2024-06-21 23:07:52 PDT
Before
280148@main
, CanvasRenderingContext2DBase::fillInternal() and CanvasRenderingContext2DBase::strokeInternal() used to call Path::fastBoundingRect() only when the global filter is set. fastBoundingRect() is an expensive operation and should not be called unless its value will be used by CanvasFilterContextSwitcher::create(). CanvasLines draws all the path segments without any filter set. So calculating the fastBoundingRect() is not needed in this case.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-06-21 23:08:11 PDT
<
rdar://problem/130319651
>
Said Abou-Hallawa
Comment 2
2024-06-21 23:13:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30079
EWS
Comment 3
2024-06-22 13:27:58 PDT
Committed
280282@main
(13a39723d661): <
https://commits.webkit.org/280282@main
> Reviewed commits have been landed. Closing PR #30079 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug