REGRESSION(280148@main): It regressed the score of MotionMark CanvasLines https://bugs.webkit.org/show_bug.cgi?id=275771 rdar://130319651

Reviewed by Per Arne Vollan.

Like what we used to do before 280148@main, call Path::fastBoundingRect() only
when the global filter is set.

* Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::fillInternal):
(WebCore::CanvasRenderingContext2DBase::strokeInternal):

Canonical link: https://commits.webkit.org/280282@main